      - When throwing away a duplicate version with different hash sums, show
        also left origins in the warning message.
    - system/resolvers/native:
      - Score calculation: for removals of packages which are not manually
        installed, apply also the 'removal-of-autoinstalled' score.
        (Closes: #662027)
      - Fixed the memory leak. It was introduced in 2.0.0~alpha4.
    - cache:
      - Constructor: don't parse release files more than once.
      - Constructor: parsing release files: use an alias instead of the full
        path in error messages.
   - Don't include a not exported header from cupt/common.hpp, making a
     development binary package usable again. Fixes a regression since
     2.3.0~rc1.
   - Remove accidentally included 'using std::string' from a global namespace.
     Fixes a regression since 2.3.0~rc1.
  * downloadmethods:
    - wget:
      - Use threads instead of explicit fork()s.
  * debian:
    - libcupt2-0.shlibs: added with an initial value of 2.3.0~rc1.
    - shlibs.local: added as an alias to above.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 02 Feb 2012 11:26:19 +0200

cupt (2.4.1) unstable; urgency=medium

  * console:
    - Managing packages:
      - Fixed possible spontaneous 'Enter a package expression' messages while
        resolving problems when no solutions were found and no exception was
        thrown. This regression was introduced in 2.0.0~rc1.
  * lib:
    - system/resolvers/native:
      - Fixed throwing an exception when some solutions were found but all of
        them were autorejected. This can happen only if some solutions were
        dropped due to a solution count requirement (the option
        'cupt::resolver::max-solution-count'). This regression was introduced
        in 2.4.0 and also made the 'Enter a package expression' regression
        above able to show itself.
    - cache:
      - Constructor: don't error out if an extended states file is not